Mon Apr 11 03:08:04 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Launch-Failures/Component/Launch_Failure.idl:
        * tests/DAnCE/Launch-Failures/Component/Launch_Failure_exec.cpp:

          Attempt at a compile fix for Windows.

Mon Apr 11 03:02:24 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Launch-Failures/Interceptors/Interceptors.mpc:

          Fuzz.

Sun Apr 10 19:41:34 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Launch-Failures/Component/Launch_Failure.mpc:
        * tests/DAnCE/Launch-Failures/Component/Launch_Failure_exec.cpp:
        * tests/DAnCE/Launch-Failures/Interceptors:
        * tests/DAnCE/Launch-Failures/Interceptors/Interceptors.mpc:
        * tests/DAnCE/Launch-Failures/Interceptors/Selective_Error.h:
        * tests/DAnCE/Launch-Failures/Interceptors/Selective_Error.cpp:
        * tests/DAnCE/Launch-Failures/Interceptors/Selective_Error_Export.h:
        * tests/DAnCE/Launch-Failures/descriptors/LocalDestEndpointFailure.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/LocalFacetConnectionDifferentLMs.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/LocalNilFacetConnection.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/LocalSourceEndpointFailure.cdp:
        * tests/DAnCE/Launch-Failures/descriptors/besteffort.localityconfig:

          Expanded testing.

Sun Apr 10 17:51:42 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Base/CIAO_Exceptions.idl:
        * ciao/Containers/Container_Base.idl:
        * ciao/Containers/Container_Base_T.cpp:
        * ciao/Deployment/Handlers/Component_Handler.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:
        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:

          Improved error handling.

Sun Apr 10 12:04:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ndds_ts_default.mpb: